=== 1.7.1 / 2010-01-24

* Fix Ruby 1.9 compatibility

=== 1.7.0 / 2010-01-24

* Fix edge cases of specific comp sizes outputting incorrect exports for Equalizer 3 and MatchMover

=== 1.6.9 / 2010-01-20

* Make the commandline progress reports shorter

=== 1.6.8 / 2010-01-13

* Fix frame gap handling for repeating gaps in the Nuke importer

=== 1.6.7 / 2010-01-13

* Fix frame gap sizes in the Nuke exporter (thanks Michael Lester)

=== 1.6.6 / 2009-12-07

* Handle Hermite cuves in Shake scripts

=== 1.6.5 / 2009-11-27

* Adds the --only option for the tracksperanto binary to only export a specific format
* Automatically unlink tempfiles in the Equalizer4 exporter

=== 1.6.4 / 2009-11-25

* Adds Boujou 2d feature import support (to export for Boujou use the Shake text format)

=== 1.6.3 / 2009-11-25

* Fixes the Shake importer so that it doesn't apply correlation curves if they are not present or constantized to 1

=== 1.6.2 / 2009-11-15

* Fixes the Reformat middleware to not suppress the end_export call. Crucial for exporters that
  use end_export to finalize output
  
=== 1.6.0 / 2009-11-15

* MatchMover has top-left coordinates - fixed for both import and export
* Prevent Tracker from being Array#flatten'ed

=== 1.5.7 / 2009-11-08

* Add a Prefix middleware that prefixes tracker names

=== 1.5.6 / 2009-11-08

* Rerelase of 1.5.5 without the huge binary blob in the middle
* Interpret Shake NSplines as Linear instead of discarding them

=== 1.5.4 / 2009-10-25

* Fix a bug in the Shake importer for tracks that have no animation

=== 1.5.3 / 2009-10-17

* Fix a bug in the Nuke importer for tracks that have no animation

=== 1.5.2 / 2009-10-09

* Fix Windows-specific issue (Tempfile-related) in the Equalizer4 exporter
* Add Export::Base#just_export and Middleware::Base#just_export

=== 1.5.0 / 2009-10-09

* Implement support for older 3DE exports (in and out)

=== 1.4.0 / 2009-10-02

* Implement MayaLive import and export

=== 1.3.1 / 2009-09-23
