@@ -1,3 +1,7 @@
+* Prevent the Shake lexer from walking into the woods on files that are certainly wrong
+* Export proper project length with Nuke scripts
+* Ensure preamble for Nuke exports does not get overriden in width/height
+
 === 1.7.1 / 2010-01-24
 
 * Fix Ruby 1.9 compatibility
